--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,7 +77,7 @@ main {
     z-index: 99;
 }
 
-#home, #clocks {
+#home, #clocks, #welcome{
     width: 90%;
     margin: auto;
     display: grid;
@@ -94,25 +94,33 @@ main {
     ".   .   .   .   .   .   .  "
     ;
     height: 450px;
-    z-index: 99;
 }
 
 #clocks {
     display: none;
 }
 
-/* #home {
+#home {
     display: none;
-}  */
+} 
 
-#disOpts, #timer {
+#disOpts, #timer, #spiel {
     grid-area: dis;
     text-align: center;
     align-self: center;
 }
 
-#disOpts {
+#disOpts, #spiel {
+    align-content: center;
     font-size: 2em;
+    background-color: rgba(0, 0, 0, .6);
+    height: 100%;
+    width: 63%;
+    margin: auto;
+}
+
+#spiel {
+    font-size: 1.5em;;
 }
 
 #timer {
@@ -143,7 +151,7 @@ button {
     grid-area: op4;
 }
 
-#custom, #resetFrame {
+#custom, #resetFrame, #continue {
     grid-area: cus;
 }
 
@@ -160,8 +168,8 @@ footer {
     grid-template-columns: repeat(8, 1fr);
     grid-template-rows: repeat(2, 50px);
     grid-template-areas:
-    "mode mode .  .  .  .  .  beg beg"
-    ".    cr   cr cr cr cr cr cr  .  "
+    "mode mode .  .  .  .  beg beg"
+    ".    cr   cr cr cr cr cr  .  "
     ;
 }
 
@@ -225,7 +233,7 @@ footer {
         font-size: 35px;
     }
 
-    #disOpts {
+    #disOpts, #spiel {
         font-size: 2.5em;
     }
 }
